Draw curve fails if you stop press action before separe stylus. #53752

Closed
opened 2018-01-10 12:43:36 +01:00 by Alberto Velázquez · 13 comments

System Information
Windows 7 64bits
Wacom Intuos L

Blender Version
blender 2.79 and master

Short description of error
The problem derivate of change "left/right" click in the preferences and use left click by default. Basically when you paint a curve, in edit mode inside a curve, with the wacom the action button is different to tip of the stylus, so, to take the pressure info you need to first press the second click in the wacom (some of the other buttons) and then use the tip to pick the pressure info. But if you don't separate the stylus before unpress the other button the operation is ignored.

With normal right click by default it doesn't happen. But if you use left click (the normal behaviour for a lot of people and the normal outside blender) the tool don't work correctly and it's hard to understand the reason. One solution can be change the shortcut to tip of the wacom, but then each time that you try to make a selection you could draw a curve. Anyway, for a user that use left select and a wacom the behaviour is similar to a bug.

0001-0250.mkv
In the video you can see two different bugs. One is the problem that I talk in https://developer.blender.org/T53553 the other is the problem that talk in this report.

Exact steps for others to reproduce the error
Change the left/right click default and try to paint a curve.

**System Information** Windows 7 64bits Wacom Intuos L **Blender Version** blender 2.79 and master **Short description of error** The problem derivate of change "left/right" click in the preferences and use left click by default. Basically when you paint a curve, in edit mode inside a curve, with the wacom the action button is different to tip of the stylus, so, to take the pressure info you need to first press the second click in the wacom (some of the other buttons) and then use the tip to pick the pressure info. But if you don't separate the stylus before unpress the other button the operation is ignored. With normal right click by default it doesn't happen. But if you use left click (the normal behaviour for a lot of people and the normal outside blender) the tool don't work correctly and it's hard to understand the reason. One solution can be change the shortcut to tip of the wacom, but then each time that you try to make a selection you could draw a curve. Anyway, for a user that use left select and a wacom the behaviour is similar to a bug. [0001-0250.mkv](https://archive.blender.org/developer/F1778213/0001-0250.mkv) In the video you can see two different bugs. One is the problem that I talk in https://developer.blender.org/T53553 the other is the problem that talk in this report. **Exact steps for others to reproduce the error** Change the left/right click default and try to paint a curve.

Added subscriber: @AlbertoVelazquez

Added subscriber: @AlbertoVelazquez
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

As a first step you could set the Input from Mouse > Action to Mouse > Pen in User preferences
TT53752.png

As a first step you could set the Input from `Mouse > Action` to `Mouse > Pen` in User preferences ![TT53752.png](https://archive.blender.org/developer/F1780146/TT53752.png)
Campbell Barton was assigned by Philipp Oeser 2018-01-10 17:44:40 +01:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

@ideasman42 : since afaik having multiple keymap entries is allowed, I guess D2994: fix #53752 would do no harm?

@ideasman42 : since afaik having multiple keymap entries is allowed, I guess [D2994: fix #53752](https://archive.blender.org/developer/D2994) would do no harm?

The problem changing the action to the pen is the same that using "select". You cannot do multiple selection with shift+click with tip. So, it is not a solution.

The problem changing the action to the pen is the same that using "select". You cannot do multiple selection with shift+click with tip. So, it is not a solution.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by d0cc5d8948

This issue was referenced by d0cc5d89485f0c34cd3b79752320a40c140af050

With this commit we don't have now the possibility to make a simple shift-select with the stylus.

With this commit we don't have now the possibility to make a simple shift-select with the stylus.
Member

@AlbertoVelazquez: Maybe I'm missing the obvious, but shift-select with stylus still works here.
Could you try with factory settings and the default Keyconfig?

@AlbertoVelazquez: Maybe I'm missing the obvious, but shift-select with stylus still works here. Could you try with factory settings and the default Keyconfig?

If you use the default keyconfig, without the left click, the bug doesn't exist, then the fix don't have reason
If you use the default keyconfig, with left click, the bug exist and with new configuration the user cannot make shift+select.

If you use the default keyconfig, without the left click, the bug doesn't exist, then the fix don't have reason If you use the default keyconfig, with left click, the bug exist and with new configuration the user cannot make shift+select.
Member

Yes, I meant with left click as well [and that is still working on my side...]
@AlbertoVelazquez: could you do me a favour: can you open separate bugreport for this? You can mention this original task and the commit there. But this way it is more visible for others (also to help out reproduce)
Thx in advance

Yes, I meant with left click as well [and that is still working on my side...] @AlbertoVelazquez: could you do me a favour: can you open separate bugreport for this? You can mention this original task and the commit there. But this way it is more visible for others (also to help out reproduce) Thx in advance
Member

@AlbertoVelazquez: I guess I didnt see the obvious (sorry for this)
So it indeed conflicts with shift+select in curve editmode

@ideasman42: I think we better revert this then for now?

appologies to everyone involved for not having this on the radar :S

will think about better solutions later...

@AlbertoVelazquez: I guess I didnt see the obvious (sorry for this) So it indeed conflicts with shift+select in **curve editmode** @ideasman42: I think we better revert this then for now? appologies to everyone involved for not having this on the radar :S will think about better solutions later...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53752
No description provided.