Fix T53752: Draw curve fails w/ stylus